--- a/Schematron.XsltValidator.App/Schematron.XsltValidator.App.csproj
+++ b/Schematron.XsltValidator.App/Schematron.XsltValidator.App.csproj
@@ -1,24 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <AssemblyTitle>SchemaTron</AssemblyTitle>
-    <Description>The native ISO Schematron validator over XPath 1.0 query language binding.</Description>
+    <AssemblyTitle>Validator.App</AssemblyTitle>
     <Company>The XRouter Team</Company>
-    <Product>SchemaTron</Product>
+    <Product>Validator.App</Product>
     <Copyright>Copyright © The XRouter Team 2011</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\schema_phaseA.xml" />
-    <EmbeddedResource Include="Resources\schema_phaseB.xml" />
-    <EmbeddedResource Include="Resources\schema_phaseC.xml" />
+    <EmbeddedResource Include="Resources\sample_sch.xml" />
+    <EmbeddedResource Include="Resources\sample_xml.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Schematron.XsltValidator\Schematron.XsltValidator.csproj" />
+    <ProjectReference Include="..\SchemaTron\src\SchemaTron.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-    <PackageReference Include="XPath2" Version="1.1.5" />
   </ItemGroup>
 </Project>
